--- a/CovidDataLake.Cloud/CovidDataLake.Cloud.csproj
+++ b/CovidDataLake.Cloud/CovidDataLake.Cloud.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="AWSSDK.S3" Version="3.7.1.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CovidDataLake.Common\CovidDataLake.Common.csproj" />
+  </ItemGroup>
+
 </Project>
