--- a/CovidDataLake.Common/CovidDataLake.Common.csproj
+++ b/CovidDataLake.Common/CovidDataLake.Common.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="CardinalityEstimation" Version="1.10.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.0.0" />
-    <PackageReference Include="pythonnet" Version="3.0.0-preview2022-01-03" />
+    <PackageReference Include="pythonnet" Version="3.0.0-rc4" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
 
